@@ -34,7 +34,7 @@ use Text::LevenshteinXS qw(distance);
 
 # TODO switch to Text::Levenshtein::XS once AUR/Debian packages become available
 
-our $VERSION = '1.98';
+our $VERSION = '1.99';
 
 # Automatically generated, see share/stations.json
 my @stations = (
@@ -204,7 +204,7 @@ Travel::Status::DE::IRIS::Stations - Station name to station code mapping
 
 =head1 VERSION
 
-version 1.98
+version 1.99
 
 =head1 DESCRIPTION
 
