@@ -1,3 +1,10 @@
+Travel::Status::DE::IRIS 1.99 - Sat Jul 05 2025
+
+    * Deprecation notice: Mention Travel::Status::DE::DBRIS as recommended
+      successor. Travel::Status::DE::HAFAS is no longer a viable alternative.
+    * db-iris: Do not fail if Cache::File is unavailable
+    * Add delay code 27 (Technische Störung am Bus)
+
 Travel::Status::DE::IRIS 1.98 - Thu Jul 04 2024
 
     * Update stations list
